--- a/back-end/package.json
+++ b/back-end/package.json
@@ -11,7 +11,7 @@
   "scripts": {
     "start": "node src/server.js",
     "start:dev": "nodemon src/server.js",
-    "test": "npx cross-env LOG_LEVEL=warn jest --runInBand --detectOpenHandles --forceExit --config ./test/jest.config.js",
+    "test": "npx cross-env LOG_LEVEL=warn jest --runInBand --detectOpenHandles --forceExit",
     "test:1": "npm run test -- us-01",
     "test:2": "npm run test -- us-02",
     "test:3": "npm run test -- us-03",
@@ -37,11 +37,17 @@
     "pg": "^8.5.1",
     "pino": "^6.11.0",
     "pino-http": "^5.3.0",
-    "pino-pretty": "^4.3.0"
+    "pino-pretty": "^4.3.0",
+    "sqlite3": "^5.0.2"
   },
   "devDependencies": {
     "jest": "^26.6.3",
     "nodemon": "^2.0.6",
     "supertest": "^6.1.1"
+  },
+  "jest": {
+    "setupFilesAfterEnv": [
+      "./jest.setup.js"
+    ]
   }
 }
